--- a/hello-world/Jenkinsfile
+++ b/hello-world/Jenkinsfile
@@ -3,12 +3,12 @@ pipeline {
     stages {
         stage('Static Analysis') {
             steps {
-                echo 'Run the static analysis to the code' 
+                echo 'Hello , I am Ashna kabsuri' 
             }
         }
         stage('Compile') {
             steps {
-                echo 'Compile the source code' 
+                echo 'This is for devops Exp5' 
             }
         }
         stage('Security Check') {
@@ -18,7 +18,7 @@ pipeline {
         }
         stage('Run Unit Tests') {
             steps {
-                echo 'Run unit tests from the source code' 
+                echo 'Welcome' 
             }
         }
         stage('Run Integration Tests') {
@@ -28,7 +28,7 @@ pipeline {
         }
         stage('Publish Artifacts') {
             steps {
-                echo 'Save the assemblies generated from the compilation' 
+                echo 'Thank you' 
             }
         }
     }
