--- a/hello-world/Jenkinsfile
+++ b/hello-world/Jenkinsfile
@@ -29,6 +29,7 @@ pipeline {
         stage('Publish Artifacts') {
             steps {
                 echo 'Thank you' 
+                echo 'Bye' 
             }
         }
     }
